<?xml version="1.0"?>
<package format="2">
  <name>arm_controls</name>
  <version>0.0.0</version>
  <description>The arm_controls package</description>
  <maintainer email="reckhard@ualberta.ca">Jacob Reckhard</maintainer>
  <license>MIT</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/arm_controls</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nimbro_topic_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>nimbro_topic_transport</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nimbro_topic_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export> </export>
</package>
