<?xml version="1.0"?>
<package format="2">
  <name>drive_controls</name>
  <version>0.0.0</version>
  <description>The drive_controls package</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nimbro_topic_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>nimbro_topic_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nimbro_topic_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
