<?xml version="1.0"?>
<package format="2">
  <name>spear_rover</name>
  <version>0.0.0</version>
  <description>Package that runs on the rover</description>
  <maintainer email="reckhard@ualberta.ca">Jacob Reckhard</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>canros</build_depend>
  <build_export_depend>canros</build_export_depend>
  <exec_depend>canros</exec_depend>
</package>
