<?xml version="1.0"?>
<package format="2">
  <name>spear_rover</name>
  <version>0.0.0</version>
  <description>Package that runs on the rover</description>
  <maintainer email="reckhard@ualberta.ca">Jacob Reckhard</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>spear_msgs</depend>

  <build_depend>canros</build_depend>
  <build_export_depend>canros</build_export_depend>
  <exec_depend>canros</exec_depend>

  <exec_depend>joy</exec_depend>

  <build_depend>robot_localization</build_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>flexbe_behavior_engine</exec_depend>

  <!-- <exec_depend>razor_imu_9dof</exec_depend> -->
  <exec_depend>nmea_navsat_driver</exec_depend>

  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>rqt_ez_publisher</exec_depend>
  <build_depend>ar_track_alvar</build_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <exec_depend>rosbridge_suite</exec_depend>

  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
</package>
