<?xml version="1.0"?>
<package format="2">
  <name>spear_simulator</name>
  <version>0.0.0</version>
  <description>Simulator for rover autonomy</description>

  <maintainer email="ryan@todo.todo">ryan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf_tutorial</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>moveit</exec_depend>
</package>
