<?xml version="1.0"?>
<package format="2">
  <name>spear_station</name>
  <version>0.0.0</version>
  <description>The spear_station package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="spearua@ualberta.ca">SPEAR</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>nimbro_topic_transport</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <exec_depend>rosbridge_suite</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
