<?xml version="1.0"?>
<package format="2">
  <name>spear_msgs</name>
  <version>0.0.0</version>
  <description>The spear_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="isthatme@todo.todo">isthatme</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
