<?xml version="1.0"?>
<package format="2">
  <name>spear_rover</name>
  <version>0.0.0</version>
  <description>Package that runs on the rover</description>
  <maintainer email="reckhard@ualberta.ca">Jacob Reckhard</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Dependencies from nodes -->
  <depend>actionlib</depend>
  <depend>canros</depend>
  <depend>controller_manager</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>image_transport</depend>
  <depend>move_base</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>spear_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <!-- Dependencies from launch files -->
  <!-- <exec_depend>ar_track_alvar</exec_depend> -->
  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>case_moveit_config</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>flexbe_onboard</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>nimbro_service_transport</exec_depend>
  <exec_depend>nimbro_topic_transport</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>xacro</exec_depend>
  

  <!-- Misc things that can be useful -->
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
</package>
