<?xml version="1.0"?>
<package format="2">
  <name>spear_station</name>
  <version>0.0.0</version>
  <description>The spear_station package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="spearua@ualberta.ca">SPEAR</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>message_runtime</depend>

  <!-- Dependencies from nodes -->
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>spear_util</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Dependencies from launch files -->
  <exec_depend>joy</exec_depend>
  <exec_depend>nimbro_service_transport</exec_depend>
  <exec_depend>nimbro_topic_transport</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>spear_rover</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
</package>
